--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,13 @@ azul claro = 57C4F2
 body{
     background-color: #255787;
 }
+
 .container__page{
     background-color: #255787;
     align-items: center;
     justify-content: center;
     display: flex;
+    padding-top: 200px;
 }
 
 .container__login{
@@ -21,10 +23,31 @@ body{
     border-radius: 2%;
     
     display: flex;
+    flex-direction: column;
     text-align: center;
-    align-items: center;
+}
+
+.container__login .info{
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.container__login .parteName{
+    padding: 15px;
+}
+
+.container__login #buttonLogin{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 5px 30px;
+    background-color: green;
+    color: white;
+    border-radius: 5%;
+    border-color: white;
 }
 
 .container__login img{
-    width: 20%;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    width: 40%;
 }
