Mudança cor do botão

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body{
     margin-top: 15px;
     margin-bottom: 15px;
     padding: 5px 30px;
-    background-color: green;
+    background-color: #57C4F2;
     color: white;
     border-radius: 5%;
     border-color: white;
