--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,11 @@ body{
     border-color: white;
 }
 
+.container__login .userValidos{
+    color: black;
+    font-style: italic;
+    text-decoration: underline;
+}
 .container__login img{
     padding-top: 10px;
     padding-bottom: 30px;
